Додано опис роботи

--- a/readme
+++ b/readme
@@ -1,14 +1,7 @@
-Object-oriented programming.
-
-1. Using abstract classes, classes, classes-
-lists, mechanisms of inheritance and aggregation
-
-design and implement a convex class hierarchy
-quadrilaterals on the plane,
-
+##Object-oriented programming.
 (a) a rectangle,
 (b) square,
-(c) parallelogram,
+(c) parallelogram, 
 (d) rhombus,
 (e) trapezoid,
 (e) rectangular trapezoid,
@@ -51,3 +44,131 @@ quadrilaterals on the plane,
 Усі класи ієрархії повинні розміщуватися в окремих
 модулях, а для використання імпортуватися за допомогою
 інструкції import ModuleName.
+
+##Приклад роботи: 
+
+Тип фігури: Ромб
+( 0 , 0 )
+Вершина A: None
+( 0 , 3 )
+Вершина B: None
+( 3 , 3 )
+Вершина C: None
+( 3 , 0 )
+Вершина D: None
+Довжина сторони AB: 3.0
+Довжина сторони BC: 3.0
+Довжина сторони CD: 3.0
+Довжина сторони DA: 3.0
+Довжина діагоналі AC: 4.24
+Довжина сторони DB: 4.24
+Кут B: 90.0
+Кут C: 90.0
+Кут D: 90.0
+Кут A: 90.0
+Периметр: 12.0
+Площа: 9.0
+
+Тип фігури: Прямокутник
+( 0 , 0 )
+Вершина A: None
+( 2 , 3 )
+Вершина B: None
+( 3 , 3 )
+Вершина C: None
+( 5 , 0 )
+Вершина D: None
+Довжина сторони AB: 3.61
+Довжина сторони BC: 1.0
+Довжина сторони CD: 3.61
+Довжина сторони DA: 5.0
+Довжина діагоналі AC: 4.24
+Довжина сторони DB: 4.24
+Кут B: 123.69
+Кут C: 123.69
+Кут D: 56.31
+Кут A: 56.31
+Периметр: 13.21
+Площа: 9.0
+
+Тип фігури: Квадрат
+( 0 , 0 )
+Вершина A: None
+( 0 , 3 )
+Вершина B: None
+( 3 , 3 )
+Вершина C: None
+( 3 , 0 )
+Вершина D: None
+Довжина сторони AB: 3.0
+Довжина сторони BC: 3.0
+Довжина сторони CD: 3.0
+Довжина сторони DA: 3.0
+Довжина діагоналі AC: 4.24
+Довжина сторони DB: 4.24
+Кут B: 90.0
+Кут C: 90.0
+Кут D: 90.0
+Кут A: 90.0
+Периметр: 12.0
+Площа: 9.0
+
+Тип фігури: Трапеція
+( 0 , 0 )
+Вершина A: None
+( 2 , 3 )
+Вершина B: None
+( 3 , 3 )
+Вершина C: None
+( 5 , 0 )
+Вершина D: None
+Довжина сторони AB: 3.61
+Довжина сторони BC: 1.0
+Довжина сторони CD: 3.61
+Довжина сторони DA: 5.0
+Довжина діагоналі AC: 4.24
+Довжина сторони DB: 4.24
+Кут B: 123.69
+Кут C: 123.69
+Кут D: 56.31
+Кут A: 56.31
+Периметр: 13.21
+Площа: 9.0
+
+Тип фігури: Прямокутна трапеція
+( 0 , 0 )
+Вершина A: None
+( 0 , 3 )
+Вершина B: None
+( 3 , 3 )
+Вершина C: None
+( 5 , 0 )
+Вершина D: None
+Довжина сторони AB: 3.0
+Довжина сторони BC: 3.0
+Довжина сторони CD: 3.61
+Довжина сторони DA: 5.0
+Довжина діагоналі AC: 4.24
+Довжина сторони DB: 5.83
+Кут B: 90.0
+Кут C: 123.69
+Кут D: 56.31
+Кут A: 90.0
+Периметр: 14.61
+Площа: 12.0
+
+#Порівняння по площі ромба й прямокутника
+Фігури рівні
+#Порівняння по периметру ромба й прямокутника
+Фігура менша по периметру за іншу фігуру
+
+#Порівняння по площі й периметру
+Фігура менша по площі за іншу фігуру
+Фігура менша по периметру за іншу фігуру
+
+#Метод отримання переліку підтипів фігури.
+['Чотирикутник', ' Ромб']
+['Чотирикутник', 'Ромб', 'Квадрат']
+['Чотирикутник, Прямокутник']
+['Чотирикутник', 'Трапеція']
+['Чотирикутник', 'Трапеція', 'Прямокутна трапеція']
